--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -15,7 +15,7 @@
                 <div class="mb-3">
                     <label for="discount" class="form-label mb-1">Kedvezmény <small>(%) </small><a href="" (click)="$event.preventDefault(); toolTipOpen[0] = true"><fa-icon [icon]="faInfoCircle"></fa-icon></a>
                         <div *ngIf="toolTipOpen[0]" class="menu-bg" (click)="toolTipOpen[0] = false"></div>
-                        <span *ngIf="toolTipOpen[0]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[0] = false">
+                        <span [@visibilityChange] *ngIf="toolTipOpen[0]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[0] = false">
                         <small>
                             Százalékban értendő, nem kötelező megadni. A beviteli mező a jelölő négyzet kipipálásával válik aktívvá.
                             <a href="">További információ.</a>
@@ -36,7 +36,7 @@
                     <label for="delivery" class="form-label mb-1">Elérhetőség
                         <a href="" (click)="$event.preventDefault(); toolTipOpen[3] = true"><fa-icon [icon]="faInfoCircle"></fa-icon></a>
                             <div *ngIf="toolTipOpen[3]" class="menu-bg" (click)="toolTipOpen[3] = false"></div>
-                            <span *ngIf="toolTipOpen[3]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[3] = false">
+                            <span [@visibilityChange] *ngIf="toolTipOpen[3]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[3] = false">
                             <small>
                                 Adja meg, hogy a termék előre elkészített vagy csak megrendelésre elérhető. 
                                 A 'Raktáron' beviteli mező az 'előre elkészített termék' opció kiválasztása esetén lesz aktív.
@@ -68,7 +68,7 @@
                     <div formArrayName="tags">
                         <label class="mb-2">Címkék <a href="" (click)="$event.preventDefault(); toolTipOpen[1] = true"><fa-icon [icon]="faInfoCircle"></fa-icon></a>
                             <div *ngIf="toolTipOpen[1]" class="menu-bg" (click)="toolTipOpen[1] = false"></div>
-                            <span *ngIf="toolTipOpen[1]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[1] = false">
+                            <span [@visibilityChange] *ngIf="toolTipOpen[1]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[1] = false">
                             <small>
                                 A cimkék a termékek keresésében és szűrésében segítenek, ezért ajánlott megadni őket. 
                                 Kattintos a 'Címke hozzáadása' gombra, majd kezdjen el gépelni és válasszon a megjelenő opciók közül.
@@ -103,7 +103,7 @@
                         <label class="mb-2">Alapanyagok
                             <a href="" (click)="$event.preventDefault(); toolTipOpen[2] = true"><fa-icon [icon]="faInfoCircle"></fa-icon></a>
                             <div *ngIf="toolTipOpen[2]" class="menu-bg" (click)="toolTipOpen[2] = false"></div>
-                            <span *ngIf="toolTipOpen[2]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[2] = false">
+                            <span [@visibilityChange] *ngIf="toolTipOpen[2]" class="shadow rounded p-2 px-3 info" (mouseleave)="toolTipOpen[2] = false">
                             <small>
                                 Alapanyagok, hozzávalók listája, a cimkékhez hasonlóan adhatja meg. Kérjük az allergén vagy káros anyagokat mindenképp tüntesse fel!
                                 <a [routerLink]="['']">További információ.</a>
@@ -144,7 +144,7 @@
             <div class="d-flex justify-content-center">
                 <product-card [product]="newProduct"></product-card>
             </div>
-            <div *ngIf="productForm.value.tags[0]" class="d-flex justify-content-center">
+            <div [@visibilityChange] *ngIf="productForm.value.tags[0]" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
                     <div *ngFor="let tag of productForm.value.tags" class="row mx-auto">
                         <div class="col-2 text-center">
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div *ngIf="productForm.value.category != '' || productForm.value.materials != '' || productForm.value.delivery != ''" class="d-flex justify-content-center">
+            <div [@visibilityChange] *ngIf="productForm.value.category != '' || productForm.value.materials != '' || productForm.value.delivery != ''" class="d-flex justify-content-center">
                 <div class="shadow rounded px-4 pt-3 pb-2 m-2 card-preview">
                     <div class="row mx-auto">
                         <div class="col-2 text-center" *ngIf="productForm.value.category != ''">
