--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -97,7 +97,7 @@
     </div> -->
 </div>
 <page-footer></page-footer>
-<modal-window [(modalVisible)]="alertOpen">
+<modal-window [(modalVisible)]="alertOpen" [title]="'Figyelmeztetés'">
     <div class="warning">
         <div class="text-center p-3 border-top mt-2">
             <p class="large">Biztosan törölni szeretné a(z) <span class="fw-bold">{{selectedProduct.name}}</span> megnevezésű terméket?</p>
