--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -74,7 +74,7 @@
             </div>
         </form>
         <!-- <app-product-list [products]="products"></app-product-list> -->
-        <my-product-list (deleteClick)="alertDeleteProduct($event)" class="row p-0 gx-5" [products]="products"></my-product-list>
+        <my-product-list (deleteClick)="alertDeleteProduct($event)" (moreClick)="showMoreOptions($event)" class="row p-0 gx-5" [products]="products"></my-product-list>
         <div *ngIf="!products[0]" class="text-center mt-4 pt-4">
             <h1><fa-icon [icon]="faTimesCircle"></fa-icon></h1>
             <h2>Nem találtunk termékeket</h2>
@@ -108,4 +108,12 @@
             <a href="" (click)="deleteProduct($event)" class="btn btn-danger mx-1">Törlés</a>
         </div>
     </div>
+</modal-window>
+<modal-window [(modalVisible)]="moreOptionsOpen" [title]="selectedProduct.name">
+    <ul class="list-unstyled mb-0 text-start">
+        <li><a class="dropdown-item">Törlés</a></li>
+        <li><a class="dropdown-item">Szerkesztés</a></li>
+        <li><a class="dropdown-item">Legyen privát</a></li>
+        <li><a class="dropdown-item">Megtekintés vásárlóként</a></li>
+    </ul>
 </modal-window>
