--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -130,10 +130,11 @@
                     <textarea name="description" id="description" cols="30" rows="5" class="form-control" formControlName="description"></textarea>
                 </div>
                 <div *ngIf="params.edit == 'false'" class="mb-3">
-                    <a (click)="saveProduct()" class="btn btn-secondary p-2 m-2">Mentés</a>
+                    <a (click)="saveProduct()" class="btn btn-secondary p-2 m-2" [ngClass]="{'disabled':(!productForm.valid)}">Mentés</a>
                     <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!productForm.valid">Közzététel</button>
                 </div>
                 <div *ngIf="params.edit == 'true'" class="mb-3">
+                    <a *ngIf="!productPublic" (click)="saveProduct()" class="btn btn-secondary p-2 m-2" [ngClass]="{'disabled':(!productForm.valid)}">Változtatások mentés</a>
                     <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!productForm.valid">Változtatások közzététele</button>
                 </div>
             </form>
@@ -192,7 +193,7 @@
             <!-- <p class="mb-0 pb-0">Ezt a műveletet nem lehet visszavonni.</p> -->
         </div>
         <div class="d-flex justify-content-end border-top pt-2">
-            <a [routerLink]="['/my-profile']" class="btn btn-primary mx-1">Tovább</a>
+            <a [routerLink]="['/my-profile']" class="btn btn-primary mx-1" [ngClass]="{'disabled':(success == null)}">Tovább</a>
         </div>
     </div>
 </modal-window>
