more product options

--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -97,6 +97,15 @@
     </div> -->
 </div>
 <page-footer></page-footer>
+<modal-window [(modalVisible)]="moreOptionsOpen" [title]="selectedProduct.name">
+    <ul class="list-unstyled mb-0 text-start">
+        <li><a [routerLink]="['/product-details/' + selectedProduct.productId]" class="dropdown-item"><fa-icon class="mx-1" [icon]="faEye"></fa-icon>Megtekintés vásárlóként</a></li>
+        <li *ngIf="!selectedProduct.isPublic"><a class="dropdown-item"><fa-icon class="mx-1" [icon]="faLockOpen"></fa-icon>Legyen publikus</a></li>
+        <li *ngIf="selectedProduct.isPublic"><a class="dropdown-item"><fa-icon class="mx-1" [icon]="faLock"></fa-icon>Legyen privát</a></li>
+        <li><a [routerLink]="['/add-product']" [queryParams]="{edit: true, id: selectedProduct.productId}" class="dropdown-item"><fa-icon class="mx-1" [icon]="faEdit"></fa-icon>Szerkesztés</a></li>
+        <li><a (click)="alertDeleteProduct(selectedProduct.productId)" class="dropdown-item"><fa-icon class="mx-1" [icon]="faTrash"></fa-icon>Törlés</a></li>
+    </ul>
+</modal-window>
 <modal-window [(modalVisible)]="alertOpen" [title]="'Figyelmeztetés'">
     <div class="warning">
         <div class="text-center p-3 border-top mt-2">
@@ -104,16 +113,8 @@
             <p class="mb-0 pb-0">Ezt a műveletet nem lehet visszavonni.</p>
         </div>
         <div class="d-flex justify-content-between border-top pt-2">
-            <a href="" (click)="$event.preventDefault(); alertOpen = false" class="btn btn-secondary me-1">Mégse</a>
+            <a href="" (click)="$event.preventDefault(); alertOpen = false; moreOptionsOpen = false" class="btn btn-secondary me-1">Mégse</a>
             <a href="" (click)="deleteProduct($event)" class="btn btn-danger mx-1">Törlés</a>
         </div>
     </div>
-</modal-window>
-<modal-window [(modalVisible)]="moreOptionsOpen" [title]="selectedProduct.name">
-    <ul class="list-unstyled mb-0 text-start">
-        <li><a class="dropdown-item">Törlés</a></li>
-        <li><a class="dropdown-item">Szerkesztés</a></li>
-        <li><a class="dropdown-item">Legyen privát</a></li>
-        <li><a class="dropdown-item">Megtekintés vásárlóként</a></li>
-    </ul>
 </modal-window>
