--- a/agora-angular/src/app/my-profile/product-form/product-form.component.html
+++ b/agora-angular/src/app/my-profile/product-form/product-form.component.html
@@ -134,7 +134,7 @@
                     <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!productForm.valid">Közzététel</button>
                 </div>
                 <div *ngIf="params.edit == 'true'" class="mb-3">
-                    <a *ngIf="!productPublic" (click)="saveProductChange()" class="btn btn-secondary p-2 m-2" [ngClass]="{'disabled':(!productForm.valid)}">Változtatások mentés</a>
+                    <a *ngIf="editingProduct ? !editingProduct.isPublic : false" (click)="saveProductChange()" class="btn btn-secondary p-2 m-2" [ngClass]="{'disabled':(!productForm.valid)}">Változtatások mentés</a>
                     <a type="submit" (click)="publishProductChange()" class="btn btn-primary p-2 m-2" [ngClass]="{'disabled':(!productForm.valid)}">Változtatások közzététele</a>
                 </div>
             </form>
