--- a/agora-angular/src/app/cart/cart.component.html
+++ b/agora-angular/src/app/cart/cart.component.html
@@ -3,18 +3,17 @@
     <div class="row">
         <div class="shadow rounded p-3 m-2 col-12 col-lg-8">
             <div class="mx-5">
-                <!-- <div *ngFor="let product of productListShort" class="border-bottom">
+                <div *ngFor="let product of cart.products" class="border-bottom">
                     <div class="row p-2 pb-0 mt-2">
                         <div class="col-4 col-lg-2">
-                            <img src="{{product.imgUrl[0]}}" alt="" class="img img-fluid rounded">
+                            <img src="{{product.imgUrl}}" alt="" class="img img-fluid rounded">
                         </div>
                         <div class="col-8 col-lg-6">
-                            <h5 class="fw-bold">{{product.name}}</h5>
-                            <a href="" class="text-decoration-none">{{product.sellerFirstName}}</a>
-                            <p>{{product.delivery}}</p>
+                            <h5 [routerLink]="['/product-details', product.productId]" class="fw-bold">{{product.name}}</h5>
+                            <a [routerLink]="['/profile', product.sellerId]" class="text-decoration-none">{{product.sellerLastName}} {{product.sellerFirstName}}</a>
                         </div>
                         <div class="col-6 col-lg-2 mt-3">
-                            <p>1 db</p>
+                            <p>{{product.amount}} db</p>
                         </div>
                         <div class="col-6 col-lg-2 mt-3">
                             <h4 class="fw-bold">{{product.price|price}}</h4>
@@ -23,7 +22,7 @@
                     <div class="row mb-3 mt-0 pt-0">
                         <div class="d-flex justify-content-end">
                             <div class="me-3">
-                                <a href="" class="text-decoration-none me-3">
+                                <a href="" (click)="addToWishList($event, product.productId)" class="text-decoration-none me-3">
                                     <fa-icon [icon]="faHeart"></fa-icon>
                                     Kívánság lista
                                 </a>
@@ -34,23 +33,23 @@
                             </div>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
         <div class="shadow rounded p-4 m-2 col-12 col-lg-3">
             <h5 class="fw-bold">Rendelés összegzése</h5>
             <div class="justify-content-between d-flex">
                 <p>Összeg</p>
-                <p>71 500 Ft</p>
+                <p>{{cart.sumPrice|price}}</p>
             </div>
             <div class="justify-content-between d-flex">
                 <p>Szállítás</p>
-                <p>1 000 Ft</p>
+                <p>-</p>
             </div>
             <hr class="mt-0">
             <div class="mb-4">
                 <h4 class="fw-bold">Végösszeg:</h4>
-                <h4 class="fw-bold">72 500 Ft</h4>
+                <h4 class="fw-bold">{{cart.sumPrice|price}}</h4>
             </div>
             <div class="input-group d-flex justify-content-center">
                 <a href="" class="btn btn-lg btn-primary">Folytatás
