--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid header" style="background-image: url('../../{{user.headerImgUrl}}');"></div>
-<div class="container">
+<div class="container page">
     <div class="d-grid justify-content-md-center">
         <div class="round profile-picture ms-4 mt-4 bg-white shadow">
             <img class="p-2 round profile-picture" src="{{user.profileImgUrl}}" alt="">
@@ -79,6 +79,39 @@
             <h1><fa-icon [icon]="faTimesCircle"></fa-icon></h1>
             <h2>Nem találtunk termékeket</h2>
             <p>amit keresel nics itt</p>
+        </div>
+    </div>
+    <div [@visibilityChange] *ngIf="tabOpen == 2">
+        <div class="mx-5">
+            <div *ngFor="let product of wishList" class="border-bottom">
+                <div class="row p-2 pb-0 mt-2">
+                    <div class="col-4 col-lg-1 mb-3">
+                        <img src="{{product.imgUrl}}" alt="" class="img img-fluid rounded">
+                    </div>
+                    <div class="col-8 col-lg-5">
+                        <h5 class="fw-bold">{{product.name}}</h5>
+                        <a href="" class="text-decoration-none">{{product.sellerLastName}} {{product.sellerFirstName}}</a>
+                    </div>
+                    <div class="col-6 col-lg-2 mt-3">
+                        <h4 class="fw-bold">{{product.price|price}}</h4>
+                    </div>
+                    <div class="col mt-3 mb-2">
+                        <div class="d-flex justify-content-end">
+                            <div class="me-3">
+                                <a href="" class="btn btn-primary">
+                                    <fa-icon [icon]="faHeart"></fa-icon>
+                                    Vásárlás
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div *ngIf="wishList[0] == undefined" class="text-center mt-4 pt-4">
+                <h1><fa-icon [icon]="faTimesCircle"></fa-icon></h1>
+                <h2>A kívánság lista üres</h2>
+                <p>nincs itt semmi</p>
+            </div>
         </div>
     </div>
     <!-- <div class="row d-flex justify-content-between">
