--- a/agora-angular/src/app/my-profile/my-profile.component.html
+++ b/agora-angular/src/app/my-profile/my-profile.component.html
@@ -98,7 +98,7 @@
                     <div class="col mt-3 mb-2">
                         <div class="d-flex justify-content-end">
                             <div class="me-3">
-                                <a href="" class="btn btn-secondary me-2">
+                                <a href="" (click)="deleteWishList($event, product.wishListId)" class="btn btn-secondary me-2">
                                     <fa-icon [icon]="faHeartBroken"></fa-icon>
                                     Törlés
                                 </a>
