--- a/agora-angular/src/app/cart/cart.component.html
+++ b/agora-angular/src/app/cart/cart.component.html
@@ -34,6 +34,11 @@
                         </div>
                     </div>
                 </div>
+                <div *ngIf="cart.products[0] == undefined" class="text-center mt-4 pt-4">
+                    <h1><fa-icon [icon]="faShoppingCart"></fa-icon></h1>
+                    <h2>A kosarad üres</h2>
+                    <p>csak arra vár, hogy vásárolni kezdj</p>
+                </div>
             </div>
         </div>
         <div class="shadow rounded p-4 m-2 col-12 col-lg-3">
