--- a/agora-angular/src/app/order/order.component.html
+++ b/agora-angular/src/app/order/order.component.html
@@ -2,10 +2,6 @@
   <h2 class="text-center">Szállítási adatok</h2>
   <div class="p-3 ps-3">
     <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-      <!-- <div class="mb-3">
-        <label for="name" class="form-label mb-1">Megnevezés</label>
-        <input type="text" class="form-control" formControlName="name" id="name">
-      </div> -->
       <h3 class="border-bottom pb-1">Vásárló adatai</h3>
       <div class="row">
         <div class="mb-3 col-12 col-md-6 col-lg-3">
@@ -42,16 +38,16 @@
         <div class="col-12 col-md-2 col-lg-3">
           <div class="mb-3">
             <label for="postalCode" class="form-label mb-1">Irányítószám</label>
-            <input type="number" class="form-control" formControlName="postalCode" id="postalCode" step="1">
+            <input type="number" class="form-control" formControlName="postalCode" id="postalCode" step="1" (input)="autoFillAddress()" >
           </div>
         </div>
         <div class="col-12 col-md-5 col-lg-5 col-xl-4">
           <div class="mb-3">
             <label for="postalCode" class="form-label mb-1">Megye/régió</label>
-            <select class="form-select custom-select" aria-label="Default select example" formControlName="country"
+            <select class="form-select custom-select" aria-label="Default select example" formControlName="region"
               id="country" name="country">
-              <!-- <option *ngFor="let option of categories" [value]="option">{{option}}</option> -->
-              <option value="hu">Győr-Moson-Sopron Megye</option>
+              <option *ngFor="let region of regions" [ngValue]="region">{{region}}</option>
+              <!-- <option value="hu">Győr-Moson-Sopron Megye</option> -->
             </select>
           </div>
         </div>
@@ -61,14 +57,27 @@
           <label for="city" class="form-label mb-1">Város/település</label>
           <input type="text" class="form-control" formControlName="city" id="city">
         </div>
-      </div>
-      <div class="row">
         <div class="col-12 col-md-7 col-lg-5 mb-3">
           <label for="streetAddress" class="form-label mb-1">Utca, házszám</label>
-          <input type="text" class="form-control" formControlName="streetaddress" id="streetAddress">
+          <input type="text" class="form-control" formControlName="streetAddress" id="streetAddress">
         </div>
       </div>
-      <button type="submit" class="btn btn-primary p-2 m-2" [disabled]="!addressForm.valid">Tovább</button>
+      <a [routerLink]="['/cart']" class="btn btn-secondary">
+        <fa-icon [icon]="faChevronLeft"></fa-icon>
+        Vissza
+      </a>
+      <button type="submit" class="btn btn-primary m-2" [disabled]="!addressForm.valid">
+        Tovább
+        <fa-icon [icon]="faChevronRight"></fa-icon>
+      </button>
     </form>
   </div>
 </div>
+<modal-window [(modalVisible)]="modalOpen" [allowClose]="false" [title]="'Feldolgozás'">
+  <div class="text-center p-3 border-top mt-2">
+    <p class="large">
+      <fa-icon [icon]="faSpinner" [spin]="true"></fa-icon>
+      Betöltés...
+    </p>
+  </div>
+</modal-window>
