--- a/agora-angular/src/app/cart/cart.component.html
+++ b/agora-angular/src/app/cart/cart.component.html
@@ -57,9 +57,9 @@
                 <h4 class="fw-bold">{{cart.sumPrice|price}}</h4>
             </div>
             <div class="input-group d-flex justify-content-center">
-                <a href="" class="btn btn-lg btn-primary">Folytatás
+                <a [routerLink]="['/order']" class="btn btn-lg btn-primary">Folytatás
                 </a>
-                <a href="" class="btn btn-secondary btn-lg">
+                <a [routerLink]="['/order']" class="btn btn-secondary btn-lg">
                     <fa-icon [icon]="faChevronRight"></fa-icon>
                 </a>
             </div>
@@ -67,4 +67,4 @@
     </div>
 </div>
 
-<page-footer></page-footer>
+<!-- <page-footer></page-footer> -->
